# bidding-platform

./: Cargo.toml  README.md
schema/: bidding-platform.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_highest_bid.json  response_to_total_bid.json
src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
src/multitest/: tests.rs
